--- a/RockPaperScissors/index.html
+++ b/RockPaperScissors/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <script src="script.js" defer></script>
     <style>
         body{
             background: url("rps.jpg") no-repeat fixed center;
@@ -27,13 +28,14 @@
             align-items: center;
             justify-content: center;
             flex-direction: row;
-            gap: 30px;
+            gap: 50px;
             margin-top: 50px;
         }
         button{
             background-color: lightskyblue;
             color: black;
-            font-size: large;
+            font-size: 25pt;
+            padding: 10px;
             border-radius: 5px;
             border: 1px solid black;
         }
